--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rxjs": "^5.5.6",
     "truffle": "^4.0.6",
     "truffle-contract": "^3.0.3",
+    "zeppelin-solidity": "^1.6.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
