--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "ajv": "^6.4.0",
     "core-js": "^2.4.1",
+    "drizzle": "^1.1.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
-    "truffle": "^4.0.6",
+    "truffle": "^4.1.5",
     "truffle-contract": "^3.0.3",
-    "zeppelin-solidity": "^1.6.0",
+    "zeppelin-solidity": "1.8.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
